login requied view upgrade

--- a/Kurzusok/Kurzusok/Views/Shared/_Layout.cshtml
+++ b/Kurzusok/Kurzusok/Views/Shared/_Layout.cshtml
@@ -21,9 +21,9 @@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
+                        </li>                        
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Subjects" asp-action="Index">Tantárgyak</a>
                         </li>
                     </ul>
                 </div>
@@ -38,7 +38,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - Kurzusok - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2021 - Kurzusok -
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
