--- a/Kurzusok/Kurzusok/Views/Teachers/Index.cshtml
+++ b/Kurzusok/Kurzusok/Views/Teachers/Index.cshtml
@@ -1,14 +1,13 @@
-﻿@model IEnumerable<Kurzusok.Models.Subjects>
+﻿@model IEnumerable<Kurzusok.Models.Teachers>
 
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Kurzusok</h1>
+<h1>Oktatók</h1>
 
 <p>
-    <a class="btn btn-primary" asp-action="Create">Új hozzáadása</a>
-    <a class="btn btn-primary" asp-action="SearchForm">Keresés</a>
+    <a asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -17,13 +16,7 @@
                 @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.EHours)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.GyHours)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.SubjectCode)
+                @Html.DisplayNameFor(model => model.Hoursperweek)
             </th>
             <th></th>
         </tr>
@@ -35,13 +28,7 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.EHours)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.GyHours)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SubjectCode)
+                @Html.DisplayFor(modelItem => item.Hoursperweek)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
