Even better user management

--- a/Kurzusok/Kurzusok/Views/Subjects/Index.cshtml
+++ b/Kurzusok/Kurzusok/Views/Subjects/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Kurzusok.Models.Subjects>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Kurzusok";
 }
 
 <h1>Kurzusok</h1>
