--- a/Kurzusok/Kurzusok/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Kurzusok/Kurzusok/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,10 +5,10 @@
     ViewData["Title"] = "Belépés";
 }
 
-<h2>Bejelentkezés</h2>
-<hr/>
-<div class="row">
+<div class="d-flex justify-content-center">
     <div class="col-md-4">
+        <h2>Bejelentkezés</h2>
+        <hr />
         <section>
             <form id="account" method="post">
                 <div asp-validation-summary="All" class="text-danger"></div>
