--- a/Kurzusok/Kurzusok/Views/_ViewStart.cshtml
+++ b/Kurzusok/Kurzusok/Views/_ViewStart.cshtml
@@ -1,3 +1,10 @@
 ﻿@{
-    Layout = "_Layout";
+    if (Context.User.Identity.IsAuthenticated)
+    {
+        Layout = "_Layout";
+    }
+    else
+    {
+        Layout = "_SignInLayout";
+    }
 }
