Add Semester Model (SCAFFOLDING)

--- a/Kurzusok/Kurzusok/Views/Shared/_Layout.cshtml
+++ b/Kurzusok/Kurzusok/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                     </ul>
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Teachers" asp-action="Index">Statisztika</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Teachers" a-action="Index">Statisztika</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Email" title="Manage">Beállítások</a>
