--- a/Kurzusok/Kurzusok/Views/Subjects/Create.cshtml
+++ b/Kurzusok/Kurzusok/Views/Subjects/Create.cshtml
@@ -38,6 +38,11 @@
                 <span asp-validation-for="SubjectCode" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="SemesterId" class="control-label"></label>
+                <input asp-for="SemesterId" class="form-control" />
+                <span asp-validation-for="SemesterId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
