--- a/Kurzusok/Kurzusok/Views/Subjects/Index.cshtml
+++ b/Kurzusok/Kurzusok/Views/Subjects/Index.cshtml
@@ -8,47 +8,70 @@
 
 <p>
     <a class="btn btn-primary" asp-action="Create">Új hozzáadása</a>
-    <a class="btn btn-primary" asp-action="SearchForm">Keresés</a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                Tárgy kód
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.EHours)
+                Név
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.GyHours)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.SubjectCode)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.EHours)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.GyHours)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SubjectCode)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.SubjectCode)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                </td>
+                <td>
+                </td>
+                <td>
+                    <a class="text-dark" asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a class="text-dark" asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a class="text-dark" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
+
+@section SideBar{
+    <div class="sidebar">
+        <ul class="nav nav-sidebar justify-content-center">
+            <li class="nav-item">
+                <form class="navbar-form navbar-right" asp-action="SearchResult">
+                    <input type="text" name="SearchPhrase" class="form-control" placeholder="Keresés">
+                </form>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-dark dropdown-toggle pl-1" id="dropdownMenu1" data-toggle="dropdown">
+                    Link
+                </a>
+                <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+                    <li role="presentation"><a class="nav-link text-dark" role="menuitem" tabindex="-1" href="#">Action</a></li>
+                    <li role="presentation"><a class="nav-link text-dark" role="menuitem" tabindex="-1" href="#">Another action</a></li>
+                    <li role="presentation"><a class="nav-link text-dark" role="menuitem" tabindex="-1" href="#">Something else here</a></li>
+                    <li role="presentation" class="divider"></li>
+                    <li role="presentation"><a class="nav-link text-dark" role="menuitem" tabindex="-1" href="#">Separated link</a></li>
+                </ul>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-dark pl-1" asp-area="" asp-controller="Teachers" asp-action="Index">Statisztika</a>
+            </li>
+        </ul>
+    </div>
+}
