--- a/Kurzusok/Kurzusok/Views/Subjects/Index.cshtml
+++ b/Kurzusok/Kurzusok/Views/Subjects/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Kurzusok.Models.Subjects>
+﻿@model Kurzusok.ViewModels.HomeViewModel
 
 @{
     ViewData["Title"] = "Kurzusok";
@@ -26,8 +26,9 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model)
+        @foreach (var item in Model.Subjects)
         {
+
             <tr>
                 <td>
                     @Html.DisplayFor(modelItem => item.SubjectCode)
@@ -62,11 +63,13 @@
                     Link
                 </a>
                 <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-                    <li role="presentation"><a class="nav-link text-dark" role="menuitem" tabindex="-1" href="#">Action</a></li>
-                    <li role="presentation"><a class="nav-link text-dark" role="menuitem" tabindex="-1" href="#">Another action</a></li>
-                    <li role="presentation"><a class="nav-link text-dark" role="menuitem" tabindex="-1" href="#">Something else here</a></li>
-                    <li role="presentation" class="divider"></li>
-                    <li role="presentation"><a class="nav-link text-dark" role="menuitem" tabindex="-1" href="#">Separated link</a></li>
+                    @foreach (var item in Model.Semester)
+                    {
+                        
+                        <li role="presentation"><a class="nav-link text-dark" role="menuitem" tabindex="-1" href="#">@item.Date</a></li>
+
+                    }
+                    
                 </ul>
             </li>
             <li class="nav-item">
