--- a/Kurzusok/Kurzusok/Views/Shared/_Layout.cshtml
+++ b/Kurzusok/Kurzusok/Views/Shared/_Layout.cshtml
@@ -20,6 +20,9 @@
                             <a class="nav-link" asp-area="" asp-controller="Teachers" asp-action="Index">Statisztika</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Administration" asp-action="Index">Adminisztráció</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" asp-area="Identity" asp-page="/Account/Manage/Email" title="Manage">Beállítások</a>
                         </li>
                     </ul>
