Roles works completely

--- a/Kurzusok/Kurzusok/Views/Administration/EditUserRole.cshtml
+++ b/Kurzusok/Kurzusok/Views/Administration/EditUserRole.cshtml
@@ -24,7 +24,7 @@
             }
 
 
-            <input type="submit" class="btn btn-primary" value="Hozzáadás" />
+            <input type="submit" class="btn btn-primary" value="Mentés" />
             <a asp-controller="Administration" asp-action="Index" asp-route-roleId="@roleId" class="btn btn-primary">Mégse</a>
 
         </div>
