--- a/Kurzusok/Kurzusok/Views/Shared/_Layout.cshtml
+++ b/Kurzusok/Kurzusok/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html lang="hu">
 <head>
     <meta charset="utf-8" />
@@ -19,9 +20,14 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Teachers" asp-action="Index">Statisztika</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Administration" asp-action="Index">Adminisztráció</a>
-                        </li>
+                        @if (User.IsInRole("Admin"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-controller="Administration" asp-action="Index">Adminisztráció</a>
+                            </li>
+                        }
+
+
                         <li class="nav-item">
                             <a class="nav-link" asp-area="Identity" asp-page="/Account/Manage/Email" title="Manage">Beállítások</a>
                         </li>
