Create and Delete Semester function

--- a/Kurzusok/Kurzusok/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/Kurzusok/Kurzusok/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -1,13 +1,14 @@
-﻿@page
+﻿@page "/ForgotPassword"
 @model ForgotPasswordModel
 @{
     ViewData["Title"] = "Elfelejtett jelszó?";
+    Layout = "/Views/Shared/_SignInLayout.cshtml";
 }
 
 <h1>@ViewData["Title"]</h1>
 <h4>Adja meg az email címét!</h4>
 <hr />
-<div class="row">
+<div class="row d-flex justify-content-center">
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
