--- a/Kurzusok/Kurzusok/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/Kurzusok/Kurzusok/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -1,7 +1,8 @@
-﻿@page
+﻿@page "/ForgotPassword/Confirmation"
 @model ForgotPasswordConfirmation
 @{
     ViewData["Title"] = "Forgot password confirmation";
+    Layout = "/Views/Shared/_SignInLayout.cshtml";
 }
 
 <h1>@ViewData["Title"]</h1>
