--- a/Kurzusok/Kurzusok/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/Kurzusok/Kurzusok/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -1,7 +1,8 @@
-﻿@page
+﻿@page "/Register/Confirmation"
 @model RegisterConfirmationModel
 @{
     ViewData["Title"] = "Register confirmation";
+    Layout = "/Views/Shared/_SignInLayout.cshtml";
 }
 
 <h1>@ViewData["Title"]</h1>
