--- a/Kurzusok/Kurzusok/Views/Shared/_SignInLayout.cshtml
+++ b/Kurzusok/Kurzusok/Views/Shared/_SignInLayout.cshtml
@@ -8,11 +8,8 @@
     <link rel="stylesheet" href="~/css/signin.css" />
 </head>
 <body class="text-center">
-    <div>
-        <h1 class="mb-6">Kurzuskiírási rendszer</h1>
-        <form class="form-signin" id="account" method="post">
-            @RenderBody()
-        </form>
+    <div class="w-100">
+        @RenderBody()
     </div>
     <script src="~/lib/jquery/dist/jquery.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrapmin.js"></script>
